# mumu

./: .gitignore  LICENSE  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  USER_GUIDE.md  gen_tray_icons.py  index.html  package-lock.json  package.json  reminder.html  settings.html  softprompt.html  tailwind.config.js  vite.config.ts
openspec/changes/archive/2026-07-20-add-mumu-eye-care/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-add-mumu-eye-care/specs/reminders/: spec.md
openspec/changes/archive/2026-07-20-add-mumu-eye-care/specs/settings/: spec.md
openspec/changes/archive/2026-07-20-add-mumu-eye-care/specs/statistics/: spec.md
openspec/changes/archive/2026-07-20-add-mumu-eye-care/specs/ui/: spec.md
scripts/: build-release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  reminders.rs  screen_state.rs  settings.rs  statistics.rs  tray.rs  windows.rs
src-tauri/tests/: scheduler_integration.rs  settings_integration.rs
src/reminder/: ReminderPopup.tsx  audio.ts  main.tsx  types.ts
src/settings/: SettingsWindow.tsx  main.tsx  types.ts
src/softprompt/: SoftPrompt.tsx  main.tsx  types.ts
src/stores/: settings.ts  stats.ts
src/types/: reminder.ts
